# battleship-server

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/handlers/: create_room.rs  enter_room.rs  mod.rs
src/utils/: generate_random_board.rs  generate_random_ships.rs  is_ship_allocable.rs  mod.rs
